- Fix costs not covered visibility - Fix non-unique name of grad meter radio buttons

--- a/cfgov/unprocessed/apps/paying-for-college/css/college-costs/financial-item.less
+++ b/cfgov/unprocessed/apps/paying-for-college/css/college-costs/financial-item.less
@@ -144,7 +144,8 @@
 
   .o-costs-group {
     border-bottom: 1px solid @flyout-border;
-    &:first-child {
+    &:first-child,
+    &.o-costs-group--first {
       border-top: 1px solid @flyout-border;
     }
   }
